@@ -2,10 +2,10 @@
 // Begin of automatic config file
 $config["dbname"]="pandora";			// MySQL DataBase name
 $config["dbuser"]="pandora";			// DB User
-$config["dbpass"]="iysukzjq";	// DB Password
+$config["dbpass"]="pandora";	// DB Password
 $config["dbhost"]="localhost";			// DB Host
-$config["homedir"]="/var/www/pandora/";		// Config homedir
-$config["homeurl"]="http://localhost/pandora";			// Base URL
+$config["homedir"]="/var/www/pandora_console/";		// Config homedir
+$config["homeurl"]="http://localhost/pandora_console";			// Base URL
 // End of automatic config file
 ?><?php
 // Pandora FMS - the Free Monitoring System
@@ -37,10 +37,10 @@ $config["homeurl"]="http://localhost/pandora";			// Base URL
 // $config["homeurl"]="/pandora_console/";
 
 // Do not display any ERROR
-//error_reporting(0); // Need to use active console at this moment
+// error_reporting(0); // Need to use active console at this moment
 
 // Display ALL errors
-error_reporting(E_ERROR);
+error_reporting(1);
 
 // This is directory where placed "/attachment" directory, to upload files stores. 
 // This MUST be writtable by http server user, and should be in pandora root. 
